# Nooto

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  README.md  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-client.yml  release-server.yml
client/: index.html  package-lock.json  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: commands.rs  lib.rs  main.rs
client/src-tauri/src/crypt/: mod.rs
client/src-tauri/src/db/: operations.rs  schema.rs
client/src-tauri/src/sync/: operations.rs  service.rs
client/src/components/account/: AuthForm.tsx
client/src/components/sidebar/: Sidebar.tsx
notto-client/: package-lock.json
notto-client/src/: App.tsx
notto-client/src-tauri/: Cargo.toml
notto-client/src-tauri/src/: commands.rs  lib.rs
notto-client/src-tauri/src/crypt/: mod.rs
notto-client/src-tauri/src/db/: mod.rs  operations.rs  schema.rs
notto-client/src-tauri/src/sync/: mod.rs  operations.rs  service.rs
notto-client/src/components/: AccountMenu.tsx  ConflictModal.tsx  Home.tsx  LogoutWorkspaceConfirmModal.tsx  NoteEditor.tsx  Sync.tsx
notto-client/src/components/Login/: CreateAccount.tsx  Login.tsx  LoginHome.tsx
notto-client/src/components/account/: AccountMenu.tsx
notto-client/src/store/: general.tsx  modals.tsx
notto-client/src/store/__tests__/: toasts.test.ts
notto-server/: Cargo.toml  Dockerfile
notto-server/src/: main.rs  migrations.rs  schema.rs
server/: Cargo.toml  Dockerfile
server/migrations/: V1__init.sql  V2__note_server_received_at.sql
server/src/: main.rs  migrations.rs  schema.rs
shared/src/: lib.rs
