[package]
name = "nooto-server"
version = "0.1.0"
edition = "2024"
description = "A cross-platform, privacy-focused note-taking application with end-to-end encryption and self-hostable sync capabilities. The application prioritizes local-first architecture with optional cloud synchronization, enabling users to maintain full control over their data. " 
authors = ["Clément Pera"]
readme = "../README.md"
repository = "https://github.com/ClemPera/Nooto"
license-file = "../LICENSE"
license = "AGPLv3"

[package.metadata.deb]
maintainer = "Clément Pera"
section = "net"
priority = "optional"
assets = [
    { source = "target/release/nooto-server", dest = "/usr/bin/nooto-server", mode = "755" },
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/nooto-server", dest = "/usr/bin/nooto-server", mode = "0755" },
]

[dependencies]
shared = { path = "../shared" }
axum = { version="0.8", features = ["macros"] }
chrono = { version="0.4", features = ["serde"] }
dotenv = "0.15"   
mysql_async = { version="0.36", features = ["chrono"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
tokio = { version="1.48", features = ["rt-multi-thread"]}
hex = "0.4"
anyhow = "1.0"
